Configurações estruturais do ambiente de exeução.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,17 @@
 spring.data.mongodb.uri=mongodb://localhost:27017/coppervoto
 #spring.data.mongodb.username=
 #spring.data.mongodb.password=
+spring.data.mongodb.auto-index-creation=true
+
+#kafka
+#spring.kafka.bootstrap-servers=127.0.0.1:9092
+spring.kafka.producer.bootstrap-servers=127.0.0.1:9092
+#spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 
 #logging
 logging.level.org.springframework.data=debug
-logging.level.=error
+logging.level.=info
+
+#coopervoto
+coopervoto.resultadovotacao.kafka.topic=COOPERVOTO_RESULTADO_TOPIC
